fix .env ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-.env
+*.env
 yarn.lock
 
 # Created by https://www.gitignore.io/api/vim,sublimetext,node,osx,windows,linux,visualstudio,visualstudiocode
